...
                          Expanded(child: _featureMenu()),
                          Expanded(child: _languageMenu(state)),
                        ],
                      ),
                    ),
                    Positioned(
                      key: const Key("sideMenuArrow"),
                      left: 206.w,
                      top: 105.h,
                      child: Container(
                        width: 28.w,
                        height: 75.h,
                        alignment: Alignment.center,
...
          fit: BoxFit.fill,
          height: 2.h,
          width: 160.w,
        ),
        Expanded(
          child: FeatureItem(
            key: const Key("deckBuilderFeatureItem"),
            type: FeatureItemType.deckBuilder,
            isSelected: widget.inDeckBuilderMode,
            onTap: () => widget.inDeckBuilderMode ? null : _navigate(context, const DeckSelectionRoute()),
          ),
        ),
        Image.asset(
...
