...
        ),
        child: AnimatedPadding(
          padding: EdgeInsets.only(top: isFilterBarExtended ? 52.5.h : 0, left: 10.w, right: 10.w),
          curve: Curves.bounceOut,
          duration: const Duration(milliseconds: 500),
          child: PagedGridView<int, CardDTO>(
            key: const Key("deckBuilderCardList"),
            pagingController: _pagingController,
            scrollController: _scrollController,
            physics: const BouncingScrollPhysics(),
            gridDelegate: SliverGridDelegateWithFixedCrossAxisCount(crossAxisCount: 3, mainAxisExtent: 210.h),
            builderDelegate: PagedChildBuilderDelegate<CardDTO>(
              animateTransitions: true,
...
